--- a/java-kafka-avro-example/pom.xml
+++ b/java-kafka-avro-example/pom.xml
@@ -1,10 +1,8 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0"
-	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
-	
+
 	<groupId>com.njkol</groupId>
-	<artifactId>schema-registry-example</artifactId>
+	<artifactId>java-kafka-avro-example</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 
 	<properties>
@@ -12,7 +10,7 @@
 		<java.version>1.8</java.version>
 		<avro.version>1.11.0</avro.version>
 	</properties>
-
+	
 	<dependencies>
 
 		<!-- https://mvnrepository.com/artifact/org.apache.kafka/kafka-clients -->
@@ -67,5 +65,3 @@
 	</build>
 
 </project>
-
-
